# rengarde

./: .envrc  .gitignore  Cargo.toml  README.md  flake.nix
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml  build.rs
crates/server/src/: main.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
nix/core/: rust.nix  shells.nix
nix/rengarde/: packages.nix
