[package]
name = "server"
edition = "2021"
version.workspace = true

[features]
default = ["rt-tokio"]
rt-rayon = ["rayon", "dashmap/rayon"]
rt-tokio = ["futures", "tokio", "tokio-stream", "tokio-util"]

[dependencies]
shared = { path = "../shared" }

# featured dependencies
dashmap = { version = "5.5", default-features = false }
futures = { version = "0.3", optional = true }
rayon = { version = "1.10", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-stream = { version = "0.1", optional = true }
tokio-util = { version = "0.7", optional = true }

anyhow = "1.0"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
socket2 = { version = "0.5", features = ["all"] }


[build-dependencies]
anyhow = "1.0"
vergen = { version = "8.0", features = ["build", "cargo", "git", "gitcl"] }
